Fixed table overflow issue and added popover to show row full length
Previously the table overflowed off the panel it is now contained with truncating the data in the table in order to do so. To counter this you can now click on a item to view a popover with the full length.

--- a/assets/bootstrap/v0ltureDesign.css
+++ b/assets/bootstrap/v0ltureDesign.css
@@ -170,3 +170,15 @@ table[data-sortable].sortable-theme-bootstrap th[data-sorted="true"] {
 .pagination>li>a, .pagination>li>span {
   background-color: #C630D1 !important;
 }
+
+/* Stackoverflow: http://stackoverflow.com/questions/22978990/ */
+
+.table {
+  table-layout:fixed;
+}
+
+.table td, .table th {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
